<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item android:id="@+id/menu_profile"
            android:icon="@drawable/user_id_icon"
            android:title="@string/profile"
            app:fontFamily="@font/roboto_condensed_regular"/>
        <item android:id="@+id/menu_privacy"
            android:icon="@drawable/privacy_icon"
            android:title="@string/privacy"
            app:fontFamily="@font/roboto_condensed_regular"/>
        <item android:id="@+id/menu_logout"
            android:icon="@drawable/logout_btn"
            android:title="@string/logoutBtn"
            app:fontFamily="@font/roboto_condensed_regular"/>
    </group>
</menu>