<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/networkStateRelativeLayout"
    android:paddingBottom="30dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/network_icon"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whoops"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:fontFamily="@font/roboto_bold"
            style="@style/textBig" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/netWorkError"
            android:gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_condensed_regular"
            style="@style/allText"/>
        <Button
            android:id="@+id/tryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tryAgain"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_bold"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            style="@style/button"/>
    </LinearLayout>
</LinearLayout>