<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.ExitingBatchActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/green">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="10dp"
            android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar">
            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                style="@style/backArrow"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/exitingBatch"
                style="@style/toolbar"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            app:cardElevation="10dp"
            android:padding="15dp"
            app:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/batchNo"
                        android:layout_weight="1"
                        style="@style/allText"
                        android:textColor="@color/green"
                        android:fontFamily="@font/roboto_condensed_regular"/>
                    <TextView
                        android:id="@+id/batchId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layout_weight="1"
                        style="@style/allText"
                        android:textColor="@color/textColor"
                        android:fontFamily="@font/roboto_condensed_regular"
                        android:text="120"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/startDate"
                        android:layout_weight="1"
                        style="@style/allText"
                        android:textColor="@color/green"
                        android:fontFamily="@font/roboto_condensed_regular"/>
                    <TextView
                        android:id="@+id/dateExitingTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layout_weight="1"
                        style="@style/allText"
                        android:textColor="@color/textColor"
                        android:fontFamily="@font/roboto_condensed_regular"
                        android:text="2021-03-09"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/startTime"
                        android:layout_weight="1"
                        style="@style/allText"
                        android:textColor="@color/green"
                        android:fontFamily="@font/roboto_condensed_regular"/>
                    <TextView
                        android:id="@+id/timeExitingTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layout_weight="1"
                        style="@style/allText"
                        android:textColor="@color/textColor"
                        android:fontFamily="@font/roboto_condensed_regular"
                        android:text="03:38PM"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/bioMassQuantity"
                        android:layout_weight="1"
                        style="@style/allText"
                        android:textColor="@color/green"
                        android:fontFamily="@font/roboto_condensed_regular"/>
                    <TextView
                        android:id="@+id/biomassExitingQuantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="102"
                        style="@style/allText"
                        android:textColor="@color/textColor"
                        android:fontFamily="@font/roboto_condensed_regular" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        style="@style/allText"
                        android:layout_marginLeft="2dp"
                        android:textColor="@color/textColor"
                        android:fontFamily="@font/roboto_condensed_regular"
                        android:text="@string/ton"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            app:cardElevation="10dp"
            android:padding="15dp"
            app:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/endDate"
                        android:layout_weight="1"
                        style="@style/allText"
                        android:textColor="@color/green"
                        android:fontFamily="@font/roboto_condensed_regular"/>
                    <TextView
                        android:id="@+id/endDateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        style="@style/allText"
                        android:textColor="@color/textColor"
                        android:fontFamily="@font/roboto_condensed_regular"
                        android:text="2021-03-09"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/endTime"
                        android:layout_weight="1"
                        style="@style/allText"
                        android:textColor="@color/green"
                        android:fontFamily="@font/roboto_condensed_regular"/>

                    <TextView
                        android:id="@+id/endTimeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_condensed_regular"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="right"
                        android:text="03:38PM"
                        android:textColor="@color/textColor"
                        style="@style/allText" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/oilQuantity"
                        android:layout_weight="1"
                        style="@style/allText"
                        android:textColor="@color/green"
                        android:fontFamily="@font/roboto_condensed_regular"/>
                    <EditText
                        android:id="@+id/oilQuantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        style="@style/allText"
                        android:inputType="numberDecimal"
                        android:textColor="@color/textColor"
                        android:fontFamily="@font/roboto_condensed_regular"
                        android:hint="@string/enterBioMassHint"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        style="@style/allText"
                        android:layout_marginLeft="2dp"
                        android:textColor="@color/textColor"
                        android:fontFamily="@font/roboto_condensed_regular"
                        android:text="@string/liter"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/exitingBatchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="-30dp"
            android:layout_marginRight="15dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardElevation="30dp"
            android:padding="15dp"
            app:cardBackgroundColor="@color/green"
            app:cardCornerRadius="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:fontFamily="@font/roboto_bold"
                style="@style/button"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>