<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Activity.CalendarViewActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/green">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="10dp"
            android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar">
            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                style="@style/backArrow"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:text="@string/calHarvesting"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_bold"
                style="@style/toolbar"/>
        </LinearLayout>
    </LinearLayout>
    <org.naishadhparmar.zcustomcalendar.CustomCalendar
        android:id="@+id/custom_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="4dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal">
    <androidx.cardview.widget.CardView
        android:layout_width="40dp"
        android:layout_height="32dp"
        app:cardBackgroundColor="@color/green"
        app:cardCornerRadius="4dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getterThen2"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto_condensed_regular"
        android:textSize="15dp"
        android:layout_marginLeft="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="4dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="40dp"
            android:layout_height="32dp"
            app:cardBackgroundColor="@color/amber"
            app:cardCornerRadius="4dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getterThen3"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textSize="15dp"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="4dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="40dp"
            android:layout_height="32dp"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="4dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="आज की तारिख"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_condensed_regular"
            android:textSize="15dp"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="10dp"
        android:background="@color/liteBlack"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:prefixTextColor="@color/green"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/green"
            app:hintTextColor="@color/green"
            android:hint="@string/selectDateHint">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/selectDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="15dp"
                android:digits="@string/alphabet"
                android:singleLine="true"
                android:focusable="false"
                android:imeOptions="actionDone"
                android:fontFamily="@font/roboto_condensed_regular"
                android:includeFontPadding="false"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>
        <ImageView
            android:id="@+id/calenderImageBtn"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/calendar_icon"/>
    </LinearLayout>
    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:text="@string/submit"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/white"
        style="@style/button"/>
</LinearLayout>